terraform/modules/sg/main.tf
############################
# Security Group
############################

resource "aws_security_group" "firewall" {
  name        = "${var.environment}-sg"
  description = "Security group for EC2 instance"
  vpc_id      = var.vpc_id

#ingress {
#description = "SSH access"
#from_port   = 22
# to_port     = 22
#  protocol    = "tcp"
#   cidr_blocks = [var.ssh_allowed_cidr]
#  }

  ingress {
    description = "Https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #   ingress {
  #   description = "SonarQube"
  #   from_port   = 9000
  #   to_port     = 9000
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  # egress {
  #   description = "HTTPS outbound"
  #   from_port   = 443
  #   to_port     = 443
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  # egress {
  #   description = "HTTP outbound"
  #   from_port   = 80
  #   to_port     = 80
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  tags = merge(
    var.tags,
    { Name = "${var.environment}-sg" }
  )
}
